infrastructure-configurations/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: atasoy/backend-tumchainbook:v1.3
        ports:
        - containerPort: 8000
        volumeMounts:
          - name: jupyterhub-shared-volume
            mountPath: /home/shared
      volumes:
        - name: jupyterhub-shared-volume
          persistentVolumeClaim:
            claimName: jupyterhub-shared-volume
