infrastructure-configurations/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - backend.atasoyfurkan.tech
    secretName: cluster-issuer-secret-backend
  rules:
  - host: backend.atasoyfurkan.tech
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: backend 
            port:
              number: 80
